--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -36,6 +36,10 @@
 	<uk.co.bestbuy.widget.BarCodeView android:id="@+id/barcode"
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
+				android:layout_marginBottom="20dip"
+				android:layout_marginTop   ="20dip"
+				android:layout_marginLeft  ="20dip"
+				android:layout_marginRight ="20dip"
 				android:layout_below="@id/message"
 				android:layout_above="@id/customer_id"
 				/>
